# docs/swagger.json
@@ -2176,6 +2176,34 @@
                         "name": "contract_address",
                         "in": "formData",
                         "required": true
+                    },
+                    {
+                        "type": "number",
+                        "description": "充值状态0：开启；1:关闭",
+                        "name": "withdrawal_status",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "number",
+                        "description": "提笔状态0：开启；1:关闭",
+                        "name": "deposit_status",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "number",
+                        "description": "客服状态:0 必须1：不必须",
+                        "name": "customer_status",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "number",
+                        "description": "财务状态:0 必须1：不必须",
+                        "name": "financial_status",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -3876,6 +3904,18 @@
                     "description": "币种id",
                     "type": "integer"
                 },
+                "customer_status": {
+                    "description": "客服状态:0 必须1：不必须",
+                    "type": "integer"
+                },
+                "deposit_status": {
+                    "description": "提现状态：0开启;1:停用;",
+                    "type": "integer"
+                },
+                "financial_status": {
+                    "description": "财务状态:0 必须1：不必须",
+                    "type": "integer"
+                },
                 "min_withdrawal": {
                     "description": "小于该金额不能提",
                     "type": "number"
@@ -3903,6 +3943,10 @@
                 "withdrawal_fee_type": {
                     "description": "手续费类型 fixed 按百分百比,percent 固定收取",
                     "type": "string"
+                },
+                "withdrawal_status": {
+                    "description": "充值状态：0开启;1:停用;",
+                    "type": "integer"
                 }
             }
         },
@@ -3930,6 +3974,18 @@
                 },
                 "currency_id": {
                     "description": "货币id",
+                    "type": "integer"
+                },
+                "customer_status": {
+                    "description": "客服状态:0 必须1：不必须",
+                    "type": "integer"
+                },
+                "deposit_status": {
+                    "description": "提现状态：0开启;1:停用;",
+                    "type": "integer"
+                },
+                "financial_status": {
+                    "description": "财务状态:0 必须1：不必须",
                     "type": "integer"
                 },
                 "min_deposit": {
@@ -3963,6 +4019,10 @@
                 "withdrawal_fee_type": {
                     "description": "手续费类型 fixed 按百分百比,percent 固定收取",
                     "type": "string"
+                },
+                "withdrawal_status": {
+                    "description": "充值状态：0开启;1:停用;",
+                    "type": "integer"
                 }
             }
         },
@@ -4005,6 +4065,18 @@
                     "description": "代币名称",
                     "type": "string"
                 },
+                "customer_status": {
+                    "description": "客服状态:0 必须1：不必须",
+                    "type": "integer"
+                },
+                "deposit_status": {
+                    "description": "提现状态：0开启;1:停用;",
+                    "type": "integer"
+                },
+                "financial_status": {
+                    "description": "财务状态:0 必须1：不必须",
+                    "type": "integer"
+                },
                 "min_deposit": {
                     "description": "最小充值金额，小于该金额不入账",
                     "type": "number"
@@ -4018,7 +4090,7 @@
                     "type": "string"
                 },
                 "status": {
-                    "description": "状态",
+                    "description": "状态 // 状态：0开启;1:停用;2:删除",
                     "type": "integer"
                 },
                 "symbol": {
@@ -4040,6 +4112,10 @@
                 "withdrawal_fee_type": {
                     "description": "手续费类型 fixed 按百分百比,percent 固定收取",
                     "type": "string"
+                },
+                "withdrawal_status": {
+                    "description": "充值状态：0开启;1:停用;",
+                    "type": "integer"
                 }
             }
         },
